2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* fs/i386/pc/pxe.c (grub_pxe_open): Fix parsing of gateway_ip.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Network): New section.
	(Device syntax): The network device is called `(pxe)' in GRUB 2, not
	`(nd)' as in GRUB Legacy.
	(pxe_unload): New section.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Troubleshooting): `echo' is not usually available
	in the rescue shell, so recommend using `set' instead.  Thanks,
	Jordan Uggla.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Filesystem): Refer to `search' instead of `find'.
	(password): New section.
	(password_pbkdf2): New section.
	(search): New section.
	(Security): New section.
	(Troubleshooting): New section, currently very incomplete.
	(Invoking grub-mkpasswd-pbkdf2): New section.
	(Internals): New section, currently very incomplete.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/00_header.in: Add some more quoting (of
	"${prev_saved_entry}" and "${boot_once}") needed to make savedefault
	work again.
	Reported by: Mario 'BitKoenig' Holbe (Debian bug #584812).

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkpasswd-pbkdf2.c (main): Rename top-level `c' variable
	to `count', fixing variable shadowing that broke the -c option.

2010-06-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/00_header.in: Quote values assigned to `saved_entry',
	in case they contain spaces.

2010-06-04  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Prepend
	"part_" to partmap module names, in line with grub-install.
	Reported by: Jindřich Makovička (Debian bug #584426).

2010-06-04  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkimage.c: Make target-related error messages slightly
	more helpful; -O talks about "format".  Explicitly point to the use
	of -O if no target is specified.